# cproject

./: .clang-format  .gitignore  README.md  cproject.py
a1/: .clang-format
cproject/project_addons/cmake/app_cpp/: addon.yml
cproject/project_addons/cmake/app_cpp/apps/: CMakeLists.txt  main.cpp
cproject/project_addons/cmake/bench_gbench_cpp/: addon.yml
cproject/project_addons/cmake/bench_gbench_cpp/benchmark/: CMakeLists.txt  {{PROJECT}}_bench.cpp
cproject/project_addons/cmake/bench_pico_cpp/: addon.yml
cproject/project_addons/cmake/bench_pico_cpp/benchmark/: CMakeLists.txt  {{PROJECT}}_bench.cpp
cproject/project_addons/cmake/bin_cpp/: addon.yml
cproject/project_addons/cmake/bin_cpp/include/{{PROJECT}}/: lib.hpp
cproject/project_addons/cmake/bin_cpp/src/: CMakeLists.txt  main.cpp
cproject/project_addons/cmake/catch3/: addon.yml
cproject/project_addons/cmake/catch3/cmake_dep/: Catch2_3.cmake
cproject/project_addons/cmake/doctest/: addon.yml
cproject/project_addons/cmake/doctest/cmake_dep/: Doctest.cmake
cproject/project_addons/cmake/doxygen/: addon.yml
cproject/project_addons/cmake/doxygen/docs/: CMakeLists.txt  Design.md
cproject/project_addons/cmake/gbench/: addon.yml
cproject/project_addons/cmake/gbench/cmake_dep/: GBench.cmake
cproject/project_addons/cmake/gtest/: addon.yml
cproject/project_addons/cmake/gtest/cmake_dep/: GTest.cmake
cproject/project_addons/cmake/header_cpp/: addon.yml
cproject/project_addons/cmake/header_cpp/include/{{PROJECT}}/: {{PROJECT}}.hpp
cproject/project_addons/cmake/header_cpp/src/: CMakeLists.txt
cproject/project_addons/cmake/lib_cpp/: addon.yml
cproject/project_addons/cmake/lib_cpp/include/{{PROJECT}}/: {{PROJECT}}.hpp
cproject/project_addons/cmake/lib_cpp/src/: CMakeLists.txt  {{PROJECT}}.cpp  {{PROJECT}}.pc.in
cproject/project_addons/cmake/picobench/: addon.yml
cproject/project_addons/cmake/picobench/cmake_dep/: PicoBench.cmake
cproject/project_addons/cmake/test_catch3_cpp/: addon.yml
cproject/project_addons/cmake/test_catch3_cpp/tests/: CMakeLists.txt  {{PROJECT}}_test.cpp
cproject/project_addons/cmake/test_catch3_cpp2/: addon.yml
cproject/project_addons/cmake/test_catch3_cpp2/tests/: CMakeLists.txt
cproject/project_addons/cmake/test_doctest_cpp/: addon.yml
cproject/project_addons/cmake/test_doctest_cpp/tests/: CMakeLists.txt  {{PROJECT}}_test.cpp
cproject/project_addons/cmake/test_doctest_cpp2/: addon.yml
cproject/project_addons/cmake/test_doctest_cpp2/tests/: CMakeLists.txt
cproject/project_addons/cmake/test_gtest_cpp/: addon.yml
cproject/project_addons/cmake/test_gtest_cpp/tests/: CMakeLists.txt  {{PROJECT}}_test.cpp
cproject/project_addons/cmake/test_gtest_cpp2/: addon.yml
cproject/project_addons/cmake/test_gtest_cpp2/tests/: CMakeLists.txt
cproject/project_addons/cmake/vscode/: addon.yml
cproject/projects/cmake/: .clang-format  .gitignore  CMakeLists.txt  dependecies.cmake  merge.cmake  options.cmake  options_print.cmake  settings.cmake  targets.cmake  version.h.in
cproject/projects/cmake/cmake/: 00-options.cmake  compiler_01_version.cmake  compiler_02_addons.cmake  compiler_10_cxx.cmake  lint.cmake  profile.cmake  sanitizers.cmake
cproject/projects/cmake/cmake_autoload/: 00_compiler_options.cmake  00_tempvar.cmake  bench.cmake  compiler_02_addons.cmake  compiler_11_link.cmake  version.cmake
cproject/projects/cmake/cmake_opts/: coverage.cmake  lint-targets.cmake  profile.cmake  sanitizers.cmake
cproject/projects/cmake/cmake_post/: 00-options.cmake  compiler_00_options.cmake  compiler_02_addons.cmake  compiler_10_setup.cmake  coverage.cmake  profile.cmake  sanitizers.cmake  version.cmake
cproject/targets/cmake/exe_cpp/: target.yml
cproject/targets/cmake/exe_cpp/src/: CMakeLists.txt  lib.hpp
cproject/targets/cmake/exe_cpp_gtest/src/: lib.hpp  main.cpp
cproject/targets/cmake/exe_cpp_gtest/src/tests/: CMakeLists.txt
tests/: 01_cmake_test.py  01_template_test.py  03_project_addon_test.py  04_target_test.py  cproject_test.py  project_test.py  settings.cmake  target_test.py  template_test.py
tests/project_addons/cmake/test_catch3_cpp/: addon.yml
tests/projects/cmake/: project.yml  settings.cmake.tpl  targets.cmake
tests/projects/make/: project.yml
tests/targets/cmake/headerlib_cpp/: target.yml
tests/targets/make/headerlib_c/: target.yml
